# employee_management_system

./: .gitignore  README.md  example_load_workers.xlsx  notes.txt  pyproject.toml
backend/: .flake8  db.sqlite3
backend/config/: settings.py  urls.py
backend/employees/: admin.py  models.py  permissions.py  serializers.py  urls.py  view_import.py  views.py
backend/employees/migrations/: 0001_initial.py
backend/employees/tests/: test_admin.py  test_api_crud.py  test_api_import.py  test_api_list_detail.py  test_models.py  test_permissions.py
backend/services/: import_service.py
